Style and align simple page header and footer.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <router-outlet>
-	<app-header></app-header>
+	<app-header class="header"></app-header>
 	<app-editor></app-editor>
-	<app-footer></app-footer>
+	<app-footer class="footer"></app-footer>
 </router-outlet>
