--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,23 @@
+router-outlet
+{
+    display: block;
+    height: 100%;
+}
+
 .header
 {
     position: fixed;
     top: 0;
     width: 100%;
+    height: 64px;
+}
+
+.editor
+{
+    display: block;
+    height: calc(100% - 114px);
+    margin-top: 64px;
+    margin-bottom: 50px;
 }
 
 .footer
