--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <router-outlet>
 	<app-header class="header"></app-header>
-	<app-editor></app-editor>
+	<app-editor class="editor"></app-editor>
 	<app-footer class="footer"></app-footer>
 </router-outlet>
