--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -1,1 +1,3 @@
-<p>editor works!</p>
+<div style="height: 100%">
+    <ngx-monaco-editor style="height: 100%;" [options]="editorOptions" (onInit)="onInit($event)"></ngx-monaco-editor>
+</div>
