--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,4 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 app-root { display: block; height: 100%; }
+.editor-container { height: 100% !important; }
