--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -1,3 +1,3 @@
-<div style="height: 100%">
-    <ngx-monaco-editor style="height: 100%;" [options]="editorOptions" (onInit)="onInit($event)"></ngx-monaco-editor>
+<div id="editor-container" style="height: 100%">
+    <ngx-monaco-editor style="height: 100%;" [options]="options"></ngx-monaco-editor>
 </div>
