--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,8 @@
 <mat-toolbar color="primary">
     <span>ChordPro</span>
+    <span class="toolbar-spacer"></span>
+    <button mat-fab extended color="accent" (click)="onDownloadButtonClick()">
+        <mat-icon>download</mat-icon>
+        Download
+    </button>
 </mat-toolbar>
