--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,7 @@
 <mat-toolbar color="primary">
+    <button mat-icon-button (click)="toggleDrawer()">
+        <mat-icon>menu</mat-icon>
+    </button>
     <span>ChordPro</span>
     <span class="toolbar-spacer"></span>
     <button mat-fab extended color="accent" (click)="onDownloadButtonClick()">
