--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -12,7 +12,7 @@
             Download
         </button>
     </mat-sidenav>
-    <mat-sidenav-content id="editor-container" style="height: 100%;">
+    <mat-sidenav-content id="editor-container" style="height: 100%;" (window:resize)="onEditorContainerResize()" onresize="onEditorContainerResize()">
         <ngx-monaco-editor style="width: 100%; height: 100%;" [options]="options"></ngx-monaco-editor>
     </mat-sidenav-content>
 </mat-sidenav-container>
