--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body { height: 100vh; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 app-root { display: block; height: 100%; }
 .editor-container { height: 100% !important; }
+.cdk-global-overlay-wrapper { margin-top: 5%; align-items: start !important; }
