Add selection of title to new song dialog.

--- a/src/app/new-dialog/new-dialog.component.html
+++ b/src/app/new-dialog/new-dialog.component.html
@@ -1,24 +1,24 @@
 <h2 mat-dialog-title>Create new song template</h2>
-<mat-dialog-content class="mat-typography">
-    <mat-tab-group>
+<mat-dialog-content class="mat-typography" style="display: flex;">
+    <mat-tab-group style="flex-grow: 1;">
         <mat-tab>
             <ng-template mat-tab-label>
             <mat-icon class="tab-icon">auto_awesome</mat-icon>
             Automatic
             </ng-template>
-            <form class="new-form">
+            <div class="new-form" style="height: 100%;">
                 <mat-grid-list cols="3" rowHeight="75px">
                     <mat-grid-tile colspan="2" style="margin-right: 10px;">
                         <mat-form-field class="full-width">
                             <mat-label>Song title</mat-label>
-                            <input matInput placeholder="Title of the song" [value]="songTitleToSearch">
+                            <input matInput placeholder="Title of the song" [(ngModel)]="songTitleToSearch">
                             <mat-hint align="start">Optional if song artist(s) is/were given</mat-hint>
                         </mat-form-field>
                     </mat-grid-tile>
                     <mat-grid-tile colspan="1" style="margin-left: 10px;">
                         <mat-form-field class="full-width">
                             <mat-label>Song artist(s)</mat-label>
-                            <input matInput placeholder="Artist(s) of the song" [value]="songArtistsToSearch">
+                            <input matInput placeholder="Artist(s) of the song" [(ngModel)]="songArtistsToSearch">
                             <mat-hint align="start">Optional if song title is given</mat-hint>
                         </mat-form-field>
                     </mat-grid-tile>
@@ -30,22 +30,14 @@
                     </mat-grid-tile>
                 </mat-grid-list>
                 <mat-label *ngIf="searchResults.length > 0">Select desired song :</mat-label>
-                <mat-list role="list" style="margin-top: 10px;">
-                    <mat-list-item role="listitem" *ngFor="let searchResult of searchResults">
-                        <mat-grid-list cols="2" rowHeight="75px">
-                            <mat-grid-tile rowspan="2">
-                                <img src="{{searchResult.albumCover}}">
-                            </mat-grid-tile>
-                            <mat-grid-tile>
-                                <mat-label>{{searchResult.title}}</mat-label>
-                            </mat-grid-tile>
-                            <mat-grid-tile>
-                                <mat-label>{{searchResult.artists}}</mat-label>
-                            </mat-grid-tile>
-                        </mat-grid-list>
-                    </mat-list-item>
-                </mat-list>
-            </form>
+                <mat-selection-list role="list" [multiple]="false" [hideSingleSelectionIndicator]="true" style="margin-top: 10px;">
+                    <mat-list-option role="listitem" *ngFor="let searchResult of searchResults" style="margin-bottom: 10px; background-color: rgba(255, 255, 255, 0.04);">
+                        <img matListItemAvatar [src]="searchResult.albumCoverImg" alt="" style="border-radius: 0px; margin-top: 0px; margin-left: 0px; width: 72px; height: 72px;">
+                        <div matListItemTitle>{{ searchResult.title }}</div>
+                        <div matListItemLine>{{ searchResult.artists }}</div>
+                    </mat-list-option>
+                </mat-selection-list>
+            </div>
         </mat-tab>
         <mat-tab>
             <ng-template mat-tab-label>
