--- a/src/app/new-dialog/new-dialog.component.html
+++ b/src/app/new-dialog/new-dialog.component.html
@@ -6,19 +6,20 @@
             <mat-icon class="tab-icon">auto_awesome</mat-icon>
             Automatic
             </ng-template>
-            <div class="new-form" style="height: 100%;">
-                <mat-grid-list cols="3" rowHeight="75px">
-                    <mat-grid-tile colspan="2" style="margin-right: 10px;">
+            <div class="new-form" style="height: calc(100% - 40px);">
+                <mat-list>
+                <mat-grid-list cols="3" rowHeight="75px" gutterSize="10">
+                    <mat-grid-tile colspan="2">
                         <mat-form-field class="full-width">
                             <mat-label>Song title</mat-label>
-                            <input matInput placeholder="Title of the song" [(ngModel)]="songTitleToSearch">
+                            <input matInput #inpSongTitle cdkFocusInitial placeholder="Title of the song" [(ngModel)]="songTitleToSearch" (keydown.enter)="querySongSearch()">
                             <mat-hint align="start">Optional if song artist(s) is/were given</mat-hint>
                         </mat-form-field>
                     </mat-grid-tile>
-                    <mat-grid-tile colspan="1" style="margin-left: 10px;">
+                    <mat-grid-tile colspan="1">
                         <mat-form-field class="full-width">
                             <mat-label>Song artist(s)</mat-label>
-                            <input matInput placeholder="Artist(s) of the song" [(ngModel)]="songArtistsToSearch">
+                            <input matInput #inpSongAuthors placeholder="Artist(s) of the song" [(ngModel)]="songArtistsToSearch" (keydown.enter)="querySongSearch()">
                             <mat-hint align="start">Optional if song title is given</mat-hint>
                         </mat-form-field>
                     </mat-grid-tile>
@@ -29,14 +30,15 @@
                         </button>
                     </mat-grid-tile>
                 </mat-grid-list>
-                <mat-label *ngIf="searchResults.length > 0">Select desired song :</mat-label>
-                <mat-selection-list #songs role="list" [multiple]="false" [hideSingleSelectionIndicator]="true" style="margin-top: 10px;" (selectionChange)="onSongSelected($event, songs.selectedOptions.selected)">
+                <mat-divider *ngIf="searchResults.length > 0"></mat-divider>
+                <mat-selection-list #songs role="list" [multiple]="false" [hideSingleSelectionIndicator]="true" *ngIf="searchResults.length > 0" style="width: 100%;" (selectionChange)="onSongSelected($event, songs.selectedOptions.selected)">
                     <mat-list-option role="listitem" *ngFor="let searchResult of searchResults" [value]="searchResult" style="margin-bottom: 10px; background-color: rgba(255, 255, 255, 0.04);">
                         <img matListItemAvatar [src]="searchResult.albumCoverImg" alt="" style="border-radius: 0px; margin-top: 0px; margin-left: 0px; width: 72px; height: 72px;">
                         <div matListItemTitle>{{ searchResult.title }}</div>
                         <div matListItemLine>{{ searchResult.artists.join(', ') }}</div>
                     </mat-list-option>
                 </mat-selection-list>
+            </mat-list>
             </div>
         </mat-tab>
         <mat-tab>
@@ -50,5 +52,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>Cancel</button>
-    <button mat-raised-button color="primary" cdkFocusInitial [disabled]="createSongDisabled" (click)="onCreateButtonClick()">Create</button>
+    <button mat-raised-button color="primary" [disabled]="createSongDisabled" (click)="onCreateButtonClick()">Create</button>
 </mat-dialog-actions>
