--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container [hasBackdrop]="false" style="width: 100%; height: 100%">
-    <mat-sidenav id="sidenav" opened mode="side">
+    <mat-sidenav id="sidenav" opened mode="side" disableClose="true">
         <button id="new-button" mat-raised-button extended color="accent" (click)="openDialog()">
             <mat-icon>add</mat-icon>
             New
