Add chord selector component.

--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -10,11 +10,8 @@
     margin-right: 6px;
 }
 
-.vertical-spacer {
-    flex: 1 1 auto;
-}
-
 #sidenav {
+    display: flex;
     width: 175px;
     text-align: center;
 }
@@ -45,4 +42,14 @@
 .mat-divider {
     width: 100%;
     border-top-width: 3px;
+}
+
+#sidenav-container {
+    width: 100%;
+    height: 100%;
+}
+
+app-chord-selector {
+    width: 100%;
+    flex-grow: 1;
 }
