--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,11 +1,11 @@
-<mat-sidenav-container [hasBackdrop]="false" style="width: 100%; height: 100%">
+<mat-sidenav-container id="sidenav-container" [hasBackdrop]="false">
     <mat-sidenav id="sidenav" opened mode="side" disableClose="true">
         <button id="new-button" mat-raised-button extended color="accent" (click)="openDialog()">
             <mat-icon>add</mat-icon>
             New
         </button>
         <mat-divider></mat-divider>
-        <span class="vertical-spacer"></span>
+        <app-chord-selector></app-chord-selector>
         <mat-divider></mat-divider>
         <button id="download-button" mat-raised-button extended color="accent" (click)="onDownloadButtonClick()">
             <mat-icon>download</mat-icon>
