Add inlines selector. Add section selector. Add new and download buttons to header. Remove new and download buttons from sidebar.

--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -6,10 +6,6 @@
     border-radius: 0px;
 }
 
-.mat-mdc-extended-fab>.mat-icon, .mat-mdc-extended-fab>.material-icons {
-    margin-right: 6px;
-}
-
 #sidenav {
     display: flex;
     width: 175px;
@@ -23,22 +19,6 @@
     align-items: center;
 }
 
-#new-button {
-    margin: 20px 0px;
-    width: 90%;
-    padding-left: 5px;
-    padding-right: 5px;
-}
-
-#download-button {
-    margin: 20px 0px;
-    width: 90%;
-}
-
-.mdc-button--raised {
-    padding: 0 8px 0 8px;
-}
-
 .mat-divider {
     width: 100%;
     border-top-width: 3px;
@@ -49,7 +29,10 @@
     height: 100%;
 }
 
-app-chord-selector {
+app-chord-selector, app-inlines-selector, app-section-selector {
     width: 100%;
-    flex-grow: 1;
+}
+
+#editor-container {
+    height: 100%;
 }
