--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,11 @@
 .mat-toolbar-row, .mat-toolbar-single-row {
     height: 50px;
 }
+
+.horizontal-spacer {
+    flex: 1 1 auto;
+}
+
+#download-button {
+    margin-left: 10px;
+}
