Fix manual import key and mode selection. Set input focus to editor after selector inserts.

--- a/src/app/new-dialog/new-dialog.component.html
+++ b/src/app/new-dialog/new-dialog.component.html
@@ -64,7 +64,7 @@
                         <mat-form-field class="full-width">
                             <mat-label>Key</mat-label>
                             <mat-select [(ngModel)]="songKey">
-                                <mat-option *ngFor="let key of keys" [value]="key">{{key}}</mat-option>
+                                <mat-option *ngFor="let key of keys" [value]="key.value">{{key.name}}</mat-option>
                             </mat-select>
                         </mat-form-field>
                     </mat-grid-tile>
@@ -72,7 +72,7 @@
                         <mat-form-field class="full-width">
                             <mat-label>Mode</mat-label>
                             <mat-select [(ngModel)]="songMode">
-                                <mat-option *ngFor="let mode of modes" [value]="mode">{{mode}}</mat-option>
+                                <mat-option *ngFor="let mode of modes" [value]="mode.value">{{mode.name}}</mat-option>
                             </mat-select>
                         </mat-form-field>
                     </mat-grid-tile>
