--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -1,1 +1,1 @@
-<ngx-monaco-editor style="width: 100%; height: 100%;" [options]="options"></ngx-monaco-editor>
+<ngx-monaco-editor style="width: 100%; height: 100%;" [options]="options" (onInit)="onMonacoEditorInit($event)"></ngx-monaco-editor>
