--- a/src/app/components/editor/editor.component.html
+++ b/src/app/components/editor/editor.component.html
@@ -1,1 +1,3 @@
-<ngx-monaco-editor style="width: 100%; height: 100%;" [options]="options" (onInit)="onMonacoEditorInit($event)"></ngx-monaco-editor>
+<div id="drop-area" (dragover)="onDropAreaDragOver($event)" (drop)="onDropAreaDrop($event)">
+    <ngx-monaco-editor [options]="options" (onInit)="onMonacoEditorInit($event)"></ngx-monaco-editor>
+</div>
