Remove unsupported css syntax.

--- a/src/app/components/body/body.component.css
+++ b/src/app/components/body/body.component.css
@@ -12,7 +12,7 @@
     text-align: center;
 }
 
-:host /deep/ .mat-drawer-inner-container {
+.mat-drawer-inner-container {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
