Add header logo.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar color="primary">
-    <span>ChordPro</span>
+    <img id="logo" src="../../../assets/logo_64x64.png" alt="Logo" height="36">
+    <span>ChordPro - Editor</span>
     <span class="horizontal-spacer"></span>
     <button id="new-button" mat-raised-button extended color="accent" (click)="openDialog()">
         <mat-icon>add</mat-icon>
